syntax = "proto3";

package sfixed32;

option go_package = "xgo/tests/pb/pbinvalid";

//import "google/protobuf/any.proto";
//import "google/protobuf/duration.proto";
//import "google/protobuf/timestamp.proto";
//
//import "tests/proto/module/external.proto";

import "proto/json.proto";

message SFixed3201 {
  sfixed32 field01 = 1 [ (json.field) = { format: { int32: { } } } ];
}
